--- a/app/views/fitbit_auth/index.html.erb
+++ b/app/views/fitbit_auth/index.html.erb
@@ -1,2 +1,1 @@
-<h1>FitbitAuth#index</h1>
-<p>Find me in app/views/fitbit_auth/index.html.erb</p>
+<%= link_to "Fitbit Sign In", auth_fitbit_path %>
